5.0.0 -> 5.1a1:
    - rse: various code cleanups related to pre-processor macros and C types
    - rse: step back to the LZMA SDK 4.32 (which is identical to LZMA SDK 4.57), but with the rpm5.org cleanups still applied
    - rse: resolve type conflict between Zlib and Lzma after upgrade to latest LZMA SDK 4.40
    - jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".
    - jbj: fix: segfault from clobbering RPMMIRE_STRCMP mode w platform string.
    - proyvind: update to latest lzma sdk (4.40)
    - rpm.org: Avoid entirely unnecessary static buffer + string copy.
    - jbj: fix: reverse arrows on erasure dependency graph.
    - rse: provide the necessary pre-processor macros to allow misc/err.h to compile with Sun Studio 12 under Solaris 10
    - jbj: rpmrepo: be kind to the sqlite3 deprived.
    - jbj: rpmrepo: cleanly separate SQL representation from execution.
    - jbj: rpmrepo: populate other.sqlite with live data.
    - jbj: rpmrepo: populate filelists.sqlite with live data (w schema hackery).
    - jbj: rpmrepo: populate primary.sqlite with live data.
    - jbj: add :sqlescape for use in SQL statements generated by --qf.
    - jbj: rework --yum:primary.sqlite to include quoting.
    - jbj: add header extensions similar to xml for sql.
    - jbj: rename the primary.xml et al header extensions, adding "xml".
    - jbj: add :utf8 format conversion, use with :cdata format too.
    - jbj: rpmrepo: unsnarl the data from the methods.
    - jbj: rpmrepo: populate repomd.xml.
    - jbj: rpmrepo: populate other.xml, add --yum:other.xml alias.
    - jbj: rpmrepo: populate filelists.xml, add --yum:filelists.xml alias.
    - jbj: rpmrepo: populate primary.xml.
    - jbj: rpmdb: fix: initialize mireRegexec() pattern match buffers.
    - jbj: set the values for the blanks while reading a package.
    - jbj: add get/set methods to fill in remaining blanks in XML mark up.
    - jbj: add :cdata format to permit strings to be included in XML CDATA.